<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softbg5"
    android:orientation="vertical"
    tools:context="com.chakrireddy.ott31.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/softbg4"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three_important_things"
            android:textAlignment="center"
            android:textColor="@color/headingBackground1"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/softbg5"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/one_number"
            android:textColor="@color/blackcolor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/firstImportant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_important"
            android:textColor="@color/blackcolor"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/softbg5"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/two_number"
            android:textColor="@color/blackcolor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/secondImportant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_important"
            android:textColor="@color/blackcolor"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/three_number"
            android:textColor="@color/blackcolor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/thirdImportant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_important"
            android:textColor="@color/blackcolor"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/softbg4"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_important_thing"
            android:textAlignment="center"
            android:textColor="@color/headingBackground1"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/softbg5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/hash_value"
            android:textColor="@color/blackcolor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mostImportant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_important"
            android:textColor="@color/blackcolor"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CHAKRI"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
