<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softbg5"
    android:orientation="vertical"
    tools:context="com.chakrireddy.ott31.Contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/softbg4"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/contact"
            android:textAlignment="center"
            android:textColor="@color/headingBackground1"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/dev_info"
        android:textAlignment="textStart"
        android:textColor="@color/blackcolor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/emaillayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/messagemail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/email_info"
            android:textAlignment="textStart"
            android:textColor="@color/blackcolor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/websitelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/domain" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/website_info"
            android:textAlignment="textStart"
            android:textColor="@color/blackcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/softbg4"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/social_networks"
            android:textAlignment="center"
            android:textColor="@color/headingBackground1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/instagramlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/instagram" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/instagram_info"
            android:textAlignment="textStart"
            android:textColor="@color/blackcolor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linkedinlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/linkedin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/linkedin_info"
            android:textAlignment="textStart"
            android:textColor="@color/blackcolor" />
    </LinearLayout>
</LinearLayout>
